--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Lato";
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.checkbox {
+  border-radius: 2px;
+  border-width: 2.5px;
+  border-color: #828282;
+}
+
+.checkbox:checked,
+.checkbox[checked="true"],
+.checkbox[aria-checked="true"] {
+  background-image: linear-gradient(-45deg, transparent 65%, white 65.99%),
+    linear-gradient(45deg, transparent 75%, white 75.99%),
+    linear-gradient(-45deg, white 40%, transparent 40.99%),
+    linear-gradient(
+      45deg,
+      white 30%,
+      #828282 30.99%,
+      #828282 40%,
+      transparent 40.99%
+    ),
+    linear-gradient(-45deg, #828282 50%, white 50.99%);
 }
